Update meson build to include ThreadMan

--- a/Managers/meson.build
+++ b/Managers/meson.build
@@ -17,6 +17,7 @@ sources += files(
 'PrimitiveMan.cpp',
 'SceneMan.cpp',
 'SettingsMan.cpp',
+'ThreadMan.cpp',
 'TimerMan.cpp',
 'UInputMan.cpp',
 'WindowMan.cpp'
