fix windows meson include paths

--- a/external/include/meson.build
+++ b/external/include/meson.build
@@ -1,4 +1,4 @@
-external_inc_dirs = [include_directories( 'boost_1_75',
+external_inc_dirs = [include_directories('boost_1_75',
                                          'fmod-2.2.13',
                                          'fmod-2.2.13',
                                          'glad-2.0.0-beta',
@@ -8,5 +8,5 @@ external_inc_dirs = [include_directories( 'boost_1_75',
 if host_machine.system() in ['linux', 'darwin']
 endif
 if host_machine.system() == 'windows'
-  external_inc_dirs += include_directories( 'LZ4-1.9.3',)
+  external_inc_dirs += include_directories('LZ4-1.9.3/LZ4',)
 endif
