--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -122,9 +122,21 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
 
-      - name: Install Dependencies
-        run: |
-          brew install pkg-config tbb sdl2 minizip lz4 flac luajit lua@5.1 libpng gcc@${{env.GCC_VERSION}} ninja meson dylibbundler tree
+      - uses: melusina-org/setup-macports@v1
+        with: 
+          version: "2.8.1"
+          ports:
+            - name: gcc${{env.GCC_VERSION}}
+            - name: meson
+            - name: libsdl2
+            - name: tbb
+            - name: lz4
+            - name: libpng
+            - name: minizip
+            - name: lua
+            - name: luajit
+            - name: flac
+            - name: dylibbundler
 
       - name: Setup Meson
         env:
