can't use env within parameter file

--- a/.github/parameters/macports.yml
+++ b/.github/parameters/macports.yml
@@ -2,7 +2,7 @@
 version: "2.8.1"
 prefix: "/opt/local"
 ports:
-  - name: gcc${{env.GCC_VERSION}}
+  - name: gcc13
   - name: meson
   - name: libsdl2
   - name: tbb
