--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -122,7 +122,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
 
-      - uses: melusina-org/setup-macports@v1
+      - name: "Install Dependencies"
+        uses: melusina-org/setup-macports@v1
         with: 
           parameters:  ".github/parameters/macports.yml"
 
