--- a/.github/parameters/macports.yml
+++ b/.github/parameters/macports.yml
@@ -3,6 +3,7 @@ version: "2.8.1"
 prefix: "/opt/local"
 ports:
   - name: gcc13
+  - name: pkgconfig
   - name: meson
   - name: libsdl2
   - name: tbb
