Post-rebase cleanup to catch all the forced-through merge conflicts

--- a/Managers/meson.build
+++ b/Managers/meson.build
@@ -20,7 +20,8 @@ sources += files(
 'ThreadMan.cpp',
 'TimerMan.cpp',
 'UInputMan.cpp',
-'ThreadMan.cpp',
+'WindowMan.cpp',
+'ThreadMan.cpp'
 )
 luaman_cpp_args = preprocessor_flags
 defaults_override = []
